Dark context menus/userChrome.css
/* Dark context menus */

:root {
  --uc-menu-bkgnd: rgb(74,74,79);
  --uc-menu-color: rgb(249,249,250);
  --uc-menu-dimmed: rgba(249,249,250,0.1);
  --uc-menu-disabled: rgba(249,249,250,0.5);
  --uc-menu-separator: rgba(249,249,250,0.1);
  --uc-menu-border: rgb(39,39,43);
}

menupopup,
menu,
menuitem { 
  -moz-appearance: none !important; 
}

menuitem,
menu { 
  min-height: 1.8em;
}

.bookmark-item,
.menu-iconic,
.menuitem-iconic {
  max-height: 24px !important;
  line-height: 16px !important;
}

.menu-accel, .menu-iconic-accel, .menu-text, .menu-iconic-text {
  padding-top: 0 !important;
  padding-bottom: 0 !important;
}

#context-navigation .menuitem-iconic {
  max-height: none !important;
}

menupopup:not(.PanelUI-subView),
#main-menubar > menu > menupopup,
#context-navigation {
  color: var(--uc-menu-color) !important;
  background: var(--uc-menu-bkgnd) !important;
  border-color: var(--uc-menu-border) !important;
}

.menu-iconic-left, .menu-iconic-text {
  color: var(--uc-menu-color) !important;
}

menu:hover:not(.panel-subview-footer),
menu[_moz-menuactive]:not(.panel-subview-footer),
menu[open]:not(.panel-subview-footer),
menuitem:hover:not(.panel-subview-footer),
menuitem[_moz-menuactive]:not(.panel-subview-footer) { 
  background-color: var(--uc-menu-dimmed) !important;
  color: inherit !important; 
}

menu:not(.subviewbutton) > .menu-right { 
  filter: invert(1);
}

menu:not(.subviewbutton)[disabled="true"] > .menu-right {
  filter: none;
  color: var(--uc-menu-disabled) !important;
}

.menu-iconic-left[disabled="true"], 
.menu-iconic-text[disabled="true"], 
.bookmark-item[disabled="true"],
.menu-iconic[disabled="true"],
.menuitem-iconic[disabled="true"],
menu[disabled="true"],
menuitem[disabled="true"],
.menu-iconic-left[disabled="true"][_moz-menuactive], 
.menu-iconic-text[disabled="true"][_moz-menuactive], 
.bookmark-item[disabled="true"][_moz-menuactive],
.menu-iconic[disabled="true"][_moz-menuactive],
.menuitem-iconic[disabled="true"][_moz-menuactive],
menu[disabled="true"][_moz-menuactive],
menuitem[disabled="true"][_moz-menuactive] {
  color: var(--uc-menu-disabled) !important;
}

menupopup:not(.PanelUI-subView) {
  padding: 4px 0px !important;
}

menupopup menuitem:not(.subviewbutton), menupopup menu:not(.subviewbutton), 
#contentAreaContextMenu menuitem, #contentAreaContextMenu menu {
  padding: 4px 8px !important;
}

#context-navigation {
  padding: 0px !important;
}

#BMB_bookmarksPopup menupopup[placespopup="true"]{
  background: transparent !important;
}

menuseparator:not(.PanelUI-subView) {
  -moz-appearance: none !important;
  margin: 4px 10px !important;
  height: 1px !important;
  border: none !important;
  background: var(--uc-menu-separator) !important;
  padding: 0 !important
}

treechildren::-moz-tree-separator {
  border-color: var(--uc-menu-separator) !important;
  border-bottom: none !important;
}

.PanelUI-subView menuseparator, #context-sep-navigation {
  margin-left: 0 !important;
  margin-right: 0 !important;
}

.PanelUI-subView menuseparator.small-separator {
  margin-left: 10px !important;
  margin-right: 10px !important;
}

.panel-subview-body {
    padding: 4px 0 !important;
}

#widget-overflow-mainView > .panel-subview-body > toolbarseparator, 
.PanelUI-subView menuseparator, 
.PanelUI-subView toolbarseparator, 
.cui-widget-panelview menuseparator, 
.cui-widget-panel toolbarseparator {
    margin: 4px 0 !important;
}

.PanelUI-subView toolbarseparator[orient="vertical"] {
    margin-inline-start: 6px !important;
    margin-inline-end: 7px !important;
    margin-top: 0px !important;
    margin-bottom: 0px !important;
}

toolbaritem#appMenu-fxa-container.toolbaritem-combined-buttons {
    margin-inline-end: 0px !important;
}

.customization-uidensity-menuitem {
    max-height: none !important;
}

